...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.DealRunner"
    android:id = "@+id/business_signup_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
...
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/business_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="164dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
...
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/business_first_name_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/business_first_name_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/business_first_name_text_input_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/business_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
...
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/business_address_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/business_address_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/business_address_text_input_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/floor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
...
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/business_floor_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/business_floor_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/business_floor_text_input_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
...
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@+id/business_province_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/business_province_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/business_province_text_input_layout" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
...
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@+id/business_postal_code_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/business_postal_code_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/business_postal_code_text_input_layout" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/business_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
...
                    android:textColorHint="?colorOnPrimary"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/business_continue_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/signup_button_bg"
...
