<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/business_signup_fragment_2"
    android:theme="@style/Theme.DealRunner">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinner_business_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:hint="@string/business_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:boxStrokeColor="@android:color/transparent"
                app:layout_constraintHorizontal_bias="0.496"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <AutoCompleteTextView
                    android:id="@+id/spinner_business_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:fontFamily="@font/suezone_regular"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/business_email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="@android:color/transparent"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@+id/spinner_business_type"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/spinner_business_type"
                app:layout_constraintTop_toBottomOf="@+id/spinner_business_type">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/businessEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
                    android:hint="@string/business_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="?colorOnPrimary"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/business_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@android:color/transparent"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/business_email_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/business_email_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/business_email_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/business_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
                    android:hint="@string/business_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="?colorOnPrimary"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/business_confirm_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@+id/business_password_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/business_password_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/business_password_text_input_layout" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/business_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
                    android:hint="@string/business_confirm_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="?colorOnPrimary"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/insert_image_Button_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/signup_button_bg"
                android:fontFamily="@font/suezone_regular"
                android:text="@string/button_insert_image"
                android:textAllCaps="false"
                android:textColor="@color/white_rock"
                app:layout_constraintEnd_toEndOf="@+id/business_confirm_password_text_input_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/business_confirm_password_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/business_confirm_password_text_input_layout" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/insert_image_Button_text_input_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/insert_image_Button_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/insert_image_Button_text_input_layout">

            </LinearLayout>


            <TextView
                android:id="@+id/business_agreement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/b_t_and_c"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/insert_image_Button_text_input_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/insert_image_Button_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/insert_image_Button_text_input_layout"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/businessSignUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/signup_button_bg"
                android:fontFamily="@font/suezone_regular"
                android:text="@string/button_text_singup"
                android:textAllCaps="false"
                android:textColor="@color/white_rock"
                app:layout_constraintEnd_toEndOf="@+id/business_agreement"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/business_agreement"
                app:layout_constraintTop_toBottomOf="@+id/business_agreement" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/businessSignUpButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/businessSignUpButton"
                app:layout_constraintTop_toBottomOf="@+id/businessSignUpButton">

                <TextView
                    android:id="@+id/businessAccountAlreadyExists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_existing_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/businessLogInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_login"
                    android:layout_marginLeft="10dp"
                    android:textColor="#FFC107" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="182dp"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_logo_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo_blue" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>