...
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_italic"
            app:backgroundTint="?colorPrimary"
            app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_deals_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
...
